@@ -1299,9 +1299,9 @@ LISTFILE=/resources/lists.ini
 # DIVORCES, CHRISTENINGS, LEVELS, DETAILEDLEVELS, DEATHS, DETAILEDDEATHS,
 # CONQUESTS, CONCEPTIONS, NEWPLAYERS, LOSTLEVELS, PLAYERPURGES, CLANINFO,
 # WARRANTS, ADDACCOUNT, ACCOUNTOOC, ACCOUNTOOCNOADMIN, REALNAMEOOC,
-# REALNAMEOOCNOADMIN, NOLANGUAGE, or the names of any colors to override 
-# the default. Some of the above flags cause events to be automatically
-# broadcasted on the given channel.
+# REALNAMEOOCNOADMIN, NOLANGUAGE, ACCOUNTLOGINS, ACCOUNTLOGOFFS, or the 
+# names of any colors to override the default. Some of the above flags 
+# cause events to be automatically broadcasted on the given channel.
 CHANNELS=\
 	GOSSIP,\
 	GRATZ,\
